reports/dist/run-full-bench-20260609-085346/ingress-controllers-nginx-ingress-canary/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/canary: "true"
      nginx.ingress.kubernetes.io/canary-weight: "20"
    creationTimestamp: "2026-06-09T13:47:11Z"
    generation: 1
    name: sample-canary
    namespace: sample
    resourceVersion: "922"
    uid: ee2b3700-76e0-4a99-a28d-96bfc0413761
  spec:
    ingressClassName: nginx
    rules:
    - host: sample.test.local
      http:
        paths:
        - backend:
            service:
              name: sample-canary
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.41.99
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2026-06-09T13:47:10Z"
    generation: 1
    name: sample-stable
    namespace: sample
    resourceVersion: "921"
    uid: acdd011a-1e8b-4ea4-9196-1bff19a58364
  spec:
    ingressClassName: nginx
    rules:
    - host: sample.test.local
      http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.41.99
kind: List
metadata:
  resourceVersion: ""
