reports/dist/run-full-bench-20260609-085346/ingress-controllers-nginx-ingress-canary/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-09T13:47:11Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "640"
    uid: 27a31daa-1337-48ca-bfa6-bf977a4c6fdf
  spec:
    clusterIP: 10.96.165.195
    clusterIPs:
    - 10.96.165.195
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-09T13:47:11Z"
    name: sample-canary
    namespace: sample
    resourceVersion: "628"
    uid: 9a109d48-7d9d-4dff-b5cb-ee8430fd475a
  spec:
    clusterIP: 10.96.71.12
    clusterIPs:
    - 10.96.71.12
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample-canary
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
